# neihon

./: README.md  package-lock.json  render.yaml  vercel.json
.github/workflows/: web.yml
apps/api/: .env  .env.example  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: __init__.py  auth.py  calendar.py  health.py  plan.py  routines.py  tasks.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/domain/: __init__.py  enums.py  models.py
apps/api/app/repositories/: __init__.py  base.py  memory.py  sqlalchemy.py
apps/api/app/routers/: tasks.py
apps/api/app/schemas/: task.py
apps/api/app/services/: __init__.py  tasks.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: e42f1dce0c12_create_initial_tables.py
apps/api/src/: db.py  models.py
apps/api/tests/: conftest.py  test_health.py  test_tasks.py
apps/mobile/: App.tsx  app.json  jest.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/__tests__/: TodayScreen.test.tsx
apps/mobile/src/: types.ts
apps/web/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js
apps/web/app/: analytics.ts  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: AuthCard.tsx  Badge.tsx  Button.tsx  CTA.tsx  Card.tsx  CopyButton.tsx  Features.tsx  Footer.tsx  FormInput.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  Navbar.tsx  Pricing.tsx  RoleBadge.tsx  ServiceMap.tsx  Skeleton.tsx  StatusCard.tsx  (+5 more)
infra/: docker-compose.yml
(+35 files in other folders)
